z-index bugfix

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ html, body {
   position: absolute;
   inset: 0;
   overflow: hidden;
+  z-index: -1;
 }
 
 /* light rays */
